[B]1.3.2[/B]
- Fixed: 'No consensus yet.' at Rotten Tomatoes returns no value for correct fallback to IMDb outline

[B]1.3.1[/B]
- Added: Fallback to All Critics if Top Critics values are blank
- Added: Grab critics' consensus from Rotten Tomatoes to 'outline' field

[B]1.3.0[/B]
- Added: Choose certification from different countries (initially available USA, UK and Australia)

[B]1.2.2[/B]
- Fixed: Brought up-to-date with Team XBMC's IMDb scraper changes (version 2.1.9) i.e. "fixed: actor roles and remove scraping of imdb trailers"

[B]1.2.0[/B]
- Changed: Rotten Tomatoes functions extracted to external scraping library

[B]1.1.0[/B]
- Added: Rotten Tomatoes scraping options (Top/All Critics - TomatoMeter/Average Rating)
- Changed: Settings categorised